--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -8,6 +8,12 @@
 </div>
 <div class="col-md-4">
 <p>
+    忘记密码？
+    <a href="{{ url_for('auth.reset_password_request') }}">
+        请点击这里进行密码重置😀
+    </a>
+</p>
+<p>
     新用户？
     <a href="{{ url_for('auth.register') }}">
         请点击这里进行注册😘
