--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,10 +19,12 @@
                 <li><a href="/">Flasky</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenicated %}
-                <li><a href="{{ url_for('auth.logout') }}">Sign Out</a> </li>
+                {% if current_user.is_authenticated %}
+                        <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+                        <li><a href="{{ url_for('auth.change_email_request') }}">Change Email</a></li>
+                        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
                 {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Sign In</a> </li>
+                 <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
                 {% endif %}
             </ul>
         </div>
