--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -27,11 +27,13 @@
         上次登录时间 {{ moment(user.last_seen).fromNow() }}.
     </p>
     {% if user == current_user %}
-        <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Edit profile</a>
+        <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">编辑简介</a>
     {% endif %}
     {% if current_user.is_administrator() %}
         <a href="{{ url_for('.edit_profile_admin', id=user.id) }}">编辑简介 [管理员]</a>
     {% endif %}
     </div>
+    <h3>Posts by {{ user.username }}</h3>
+    {% include '_posts.html' %}
 </div>
 {% endblock %}
