--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,14 +9,22 @@
     </div>
     <div>
     {% if current_user.can(Permission.WRITE_ARTICLES) %}
-    {{ wtf.quick_form(form) }}
+        {{ wtf.quick_form(form) }}
     {% endif %}
     </div>
+    <div class="post-tabs">
+    <ul class="nav nav-tabs">
+        <li{% if not show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_all') }}">全部</a></li>
+        {% if current_user.is_authenticated %}
+        <li{% if show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_followed') }}">关注</a></li>
+        {% endif %}
+    </ul>
     {% include '_posts.html' %}
-    {% if pagination %}
-    <div class="pagination">
-        {{ macros.pagination_widget(pagination, '.index') }}
     </div>
+    {% if pagination %}
+        <div class="pagination">
+            {{ macros.pagination_widget(pagination, '.index') }}
+        </div>
     {% endif %}
 {% endblock %}
 {% block scripts %}
